[package]
name = "speedtest-exporter"
version = "0.1.0"
edition = "2024"
authors = ["Ben Prize Bar-On <prizeben@gmail.com>"]

keywords       = ["prometheus", "exporter"]

[dependencies]
chrono                   = { version = "0.4", features = ["serde"] }
num                      = "0.4"
serde                    = { version = "1.0", features = ["derive"] }
serde_json               = "1.0"
tokio                    = { version = "1.22.0", features = ["macros", "rt"] }
prometheus_exporter_base = { version = "1.3.0", features = ["hyper_server"] }
log = "0.4.27"
env_logger = "0.11.8"
